--- a/myProject/template/studentTable.html
+++ b/myProject/template/studentTable.html
@@ -20,7 +20,7 @@
             <td>{{i.department}}</td>
             <td>{{i.city}}</td>
             <td>{{i.age}}</td>
-            <td> </td>
+            <td><a href="#">Edit</a> <a href="#">Delet</a>  </td>
           </tr>
           <tr>
            {% endfor %}
