--- a/myProject/template/navbar.html
+++ b/myProject/template/navbar.html
@@ -10,9 +10,10 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav fw-semibold">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="  {%  url 'home'  %}  ">Home</a>
           </li>
-          <li class="nav-item"><a class="nav-link" href="  {%  url 'about'  %}  ">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="  {%  url 'studentList'  %}  ">studentTable</a></li>
+           <li class="nav-item"><a class="nav-link" href="  {%  url 'about'  %}  ">About</a></li>
           <li class="nav-item"><a class="nav-link" href="  {%  url 'service'  %}  ">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="  {%  url 'contact' %}  ">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="  {%  url 'login' %}  ">Login</a></li>
